--- a/Mirirm_Project_0727_03/app/src/main/AndroidManifest.xml
+++ b/Mirirm_Project_0727_03/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mirirm_Project_0727_03">
         <activity
+            android:name=".SecondActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
